3-k8s/pod-harbor.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app-harbor
  labels:
    app: app-harbor
spec:
  containers:
  - name: bar-app
    image: demo.goharbor.io/orlix/app:k8s
