3-k8s/service-harbor.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: app-service-harbor
spec:
  selector:
    app: app-harbor
  ports:
  # Default port used by the image
  - port: 8080
