3-k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
  # Default port used by the image
  - port: 8080
